--- a/task3.css
+++ b/task3.css
@@ -7,7 +7,7 @@
 
     body {
       background: linear-gradient(to right, #a855f7, #6366f1);
-      height: 100vh;
+      height: 100px;
       display: flex;
       align-items: center;
       justify-content: center;
